force-app/main/default/objects/Record_Visit__c/Record_Visit__c.object-meta.xml
<CustomObject>
    <label>Record Visit</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Record Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Visit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>