force-app/main/default/objects/Record_Visit__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Record Visit</relationshipLabel>
    <relationshipName>Record_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>