force-app/main/default/objects/Record_Visit__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Record Visit</relationshipLabel>
    <relationshipName>Record_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>