force-app/main/default/objects/Record_Visit__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Record Visit</relationshipLabel>
    <relationshipName>Record_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>